remove myriad pro font added padding so text won't overflow onto the arrows removed width of arrow area adjusted line-height to stop clipping of arrow graphic add rounded top corners to expand tab make expand text bold

--- a/banner-styles.css
+++ b/banner-styles.css
@@ -3,6 +3,7 @@
  * @author Rolando Henry, New Media Specialist
  *
  */
+
 #home-banner {
 	height: 185px;
 	margin: 0 auto;
@@ -36,6 +37,7 @@
 	color: #fff;
 	font-family: Verdana, sans-serif;
 	font-size: 10px;
+	font-weight: 700;
 	height: 24px;
 	line-height: 2.5;
 	padding: 0 25px 0 5px;
@@ -46,6 +48,9 @@
 	top: 162px;
 	width: 80px;
 	z-index: 60;
+	border-radius: 5px 5px 0 0; /* ncs: add rounded top corners */
+	-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;
 }
 
 #home-banner .expanded {
@@ -71,7 +76,7 @@
 	text-shadow: 1px 1px 4px rgba(4, 4, 4, 0.8);
 	top: 62px;
 	width: 200px;
-	font: 40px/1 "Myriad Pro", Arial, sans-serif;
+	font: 40px/1 'Helvetica Neue', Arial, Verdana sans-serif; /* ncs: remove myriad pro font */
 }
 
 #home-banner #banner-bottom {
@@ -87,7 +92,7 @@
 
 #home-banner .banner-content {
 	color: #fff;
-	font: 13px/1 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 13px/1 Verdana, 'Helvetica Neue', Helvetica, Arial, sans-serif; /* ncs: change default font to match */
 	font-weight: 300;
 	list-style: none;
 	margin: 0 0 0 140px;
@@ -138,8 +143,9 @@
 #home-banner .banner-content .arrows {
 	background: url(images/expand-arrow.png) no-repeat 167px -52px;
 	display: block;
-	padding: 0 3px;
-	width: 100%;
+	padding: 0 19px 0 3px; /* ncs: added padding so text won't overflow onto the arrows */
+	line-height: 1.3em
+	/*width: 100%; ncs: remove*/ 
 }
 
 #home-banner .banner-content .link1 {
